Update link for Vi + resume

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="Jeremie's web developer portolio" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>jeremtab</title>
+        <title>Jerem's portfolio</title>
+        <link
+            rel="icon"
+            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤔</text></svg>"
+        />
         <link rel="stylesheet" href="index.css" />
         <script type="importmap">
             {
@@ -22,11 +26,11 @@
         <main id="intro">
             <div id="thinkingHead"></div>
             <h1>Salut! I'm Jérémie <span id="👋">👋</span></h1>
-            <p class="subtitle">I write or teach code sometimes</p>
-            <a href="#projects" class="linkBtn">Random stuff I do <span>👇</span></a>
+            <p>Sometimes I write code, sometimes I teach code…</p>
+            <a href="#projects" class="linkBtn">Stuffs I do <span>👇</span></a>
         </main>
         <section id="projects">
-            <h2>Kind of recent projects</h2>
+            <h2>Some projects</h2>
             <div class="grid">
                 <div class="project">
                     <a href="https://voltapp.tech" target="_blank" aria-label="Voltapp"><img src="./assets/voltapp.png" alt="" /></a>
@@ -78,6 +82,18 @@
                     <img src="assets/slides-poo.png" alt="Intro to POO" />
                 </a>
             </div>
+        </section>
+        <section id="btw">
+            <h2>By the way…</h2>
+            <p>
+                This portfolio is mostly used to teach some HTML, CSS & JavaScript to students. Feel free to
+                <a target="_blank" href="https://github.com/jeremt/jeremt.github.com">fork/copy it on Github</a> and use it as your own portfolio starting
+                point!
+            </p>
+            <img
+                src="https://media.giphy.com/media/VXuKUKAgUgRlm/giphy.gif?cid=ecf05e47meq8asis12g2uqgwyf9xclv8eyflt5krakpo0jbp&ep=v1_gifs_search&rid=giphy.gif&ct=g"
+                alt="Your welcome gif"
+            />
             <a href="#intro" class="linkBtn">Back to top <span>👆</span></a>
         </section>
         <footer>
