Add some comments in JS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤔</text></svg>"
         />
         <link rel="stylesheet" href="index.css" />
+        <!-- Load ThreeJS library (see https://threejs.org/docs/index.html#manual/en/introduction/Installation) -->
         <script type="importmap">
             {
                 "imports": {
@@ -19,6 +20,7 @@
                 }
             }
         </script>
+        <!-- Import your own JS as a module -->
         <script defer type="module" src="/index.js"></script>
     </head>
     <body>
